--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="about-image">
                     <!-- PHOTO PLACEHOLDER: Replace with your actual photo -->
                     <div class="image-frame">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="Clinton Mmbohere">
+                        <img src="<a href="https://ibb.co/9kqJQRJy"><img src="<a href="https://ibb.co/9kqJQRJy"><img src="https://i.ibb.co/9kqJQRJy/clinton.jpg" alt="clinton" border="0"></a>" alt="clinton" border="0"></a>" alt="Clinton Mmbohere">
                         <div class="frame-glow"></div>
                     </div>
                 </div>
@@ -434,4 +434,5 @@
 </body>
 
 </html>
+
 
