--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- PHOTO PLACEHOLDER: Replace with your actual photo -->
             <div class="hero-image">
                 <div class="image-wrapper">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="Clinton Mmbohere" class="profile-photo">
+                    <img src="<a href="https://ibb.co/9kqJQRJy"><img src="https://i.ibb.co/9kqJQRJy/clinton.jpg" alt="clinton" border="0"></a>" alt="Clinton Mmbohere" class="profile-photo">
                     <div class="image-glow"></div>
                 </div>
             </div>
@@ -434,5 +434,6 @@
 </body>
 
 </html>
+
 
 
