--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- PHOTO PLACEHOLDER: Replace with your actual photo -->
             <div class="hero-image">
                 <div class="image-wrapper">
-                    <img src="<a href="https://ibb.co/9kqJQRJy"><img src="https://i.ibb.co/9kqJQRJy/clinton.jpg" alt="clinton" border="0"></a>" alt="Clinton Mmbohere" class="profile-photo">
+                    <img src="https://i.ibb.co/gLDGksGt/clinton.jpg" alt="clinton" border="0"></a>" alt="Clinton Mmbohere" class="profile-photo">
                     <div class="image-glow"></div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 <div class="about-image">
                     <!-- PHOTO PLACEHOLDER: Replace with your actual photo -->
                     <div class="image-frame">
-                        <img src="<a href="https://ibb.co/9kqJQRJy"><img src="<a href="https://ibb.co/9kqJQRJy"><img src="https://i.ibb.co/9kqJQRJy/clinton.jpg" alt="clinton" border="0"></a>" alt="clinton" border="0"></a>" alt="Clinton Mmbohere">
+                        <img src="https://i.ibb.co/gLDGksGt/clinton.jpg"><img src="https://i.ibb.co/9kqJQRJy/clinton.jpg" alt="clinton" border="0"></a>" alt="clinton" border="0"></a>" alt="Clinton Mmbohere">
                         <div class="frame-glow"></div>
                     </div>
                 </div>
@@ -434,6 +434,7 @@
 </body>
 
 </html>
+
 
 
 
