Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <!-- PHOTO PLACEHOLDER: Replace with your actual photo -->
             <div class="hero-image">
                 <div class="image-wrapper">
-                    <img src="https://i.ibb.co/gLDGksGt/clinton.jpg" alt="clinton" border="0"></a>" alt="Clinton Mmbohere" class="profile-photo">
-                    <div class="image-glow"></div>
+                    <img src="https://i.ibb.co/gLDGksGt/clinton.jpg"><img src="https://i.ibb.co/9kqJQRJy/clinton.jpg" alt="clinton" border="0"></a>" alt="clinton" border="0"></a>" alt="Clinton Mmbohere">
+                        <div class="frame-glow"></div>
                 </div>
             </div>
         </div>
@@ -434,6 +434,7 @@
 </body>
 
 </html>
+
 
 
 
